k8s/overlays/development/replicas-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: raushni
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: raushni
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-generator
  namespace: raushni
spec:
  replicas: 1
